--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "spatie/laravel-query-builder": "^3.6"
+        "spatie/laravel-query-builder": "^3.6",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
