--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b7eda51bd24c029dba11",
+    "/css/app.css": "/css/app.css?id=58450619db2e95ee8e8b"
 }
